/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package security;
option java_package = "bisq.security.protobuf";
option java_multiple_files = true;

message PubKey {
  bytes publicKey = 1;
  string keyId = 2;
}

message ConfidentialData {
  bytes encodedSenderPublicKey = 1;
  bytes hmac = 2;
  bytes iv = 3;
  bytes cypherText = 4;
  bytes signature = 5;
}

// Used by other modules for serializing java.security.KeyPair
message KeyPair {
  bytes privateKey = 1;
  bytes publicKey = 2;
}

message KeyPairStore {
  map<string, KeyPair > keyPairsById = 1;
}